# SQL_Intro

./: main.py  pyproject.toml  queries.sql  seeds.py
