[tool.poetry]
name = "db-intro"
version = "0.1.0"
description = ""
authors = ["MaksymYurkevych <102907831+MaksymYurkevych@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "db_intro"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.6"
faker = "^18.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
